gccida/c0/cse_main
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/cse.c:7539:1: error: use of undeclared identifier 'uid_cuid_0'; did you mean 'uid_cuid'?
uid_cuid_0 = xcalloc( max_uid + 1, 4uLL); 
^~~~~~~~~~
uid_cuid
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/cse.c:360:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/cse.c:7545:15: error: use of undeclared identifier 'uid_cuid_0'
*( ( _DWORD *)uid_cuid_0 + insn->fld[0].rtint) = i; 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/cse.c:7547:15: error: use of undeclared identifier 'uid_cuid_0'
*( ( _DWORD *)uid_cuid_0 + insn->fld[0].rtint) = ++i; 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/cse.c:7597:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)val.last[1].fld[0]; 
                      ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/cse.c:7608:7: error: use of undeclared identifier 'uid_cuid_0'; did you mean 'uid_cuid'?
free( uid_cuid_0); 
      ^~~~~~~~~~
      uid_cuid
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/cse.c:360:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_main/src/obj/cse.o] Error 1
